<resources>

    <item name="fab_new_subcategory" type="id" />
    <item name="fab_new_transaction" type="id" />


    <string name="app_name">My Grana</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_new_subcategory">Nova Subcategoria</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Compartilhar App</string>
    <string name="menu_send">Precisando organizar suas finanças? Aqui vai um app pra você: \nhttps://play.google.com/store/apps/details?id=com.guilhermemarx14.mygrana</string>
    <string name="title_activity_add_transaction">Nova Transação</string>
    <string name="text_value_transaction">Valor: </string>
    <string name="text_category">Categoria</string>
    <string name="text_subcategory">Subcategoria</string>
    <string name="text_description">Descrição</string>
    <string name="text_date">Data: </string>
    <string name="action_confirm">Confirmar</string>
    <string name="text_name">Nome</string>
    <string name="error">Erro</string>
    <string name="text_no_value">Nenhum valor inserido</string>
    <string name="text_your_balance">Seu saldo: </string>
    <string name="text_splash">Aguarde enquanto configuramos sua conta</string>
    <string name="text_statements">Extrato Financeiro</string>
    <string name="title_activity_statements">StatementsActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="text_payd">Marcar como pago</string>
    <string name="text_date_filter">Filtrar por data</string>
    <string name="text_payd_filter">Filtrar por efetivados</string>
    <string name="text_unpayd_filter">Filtrar por inadimplentes</string>
    <string name="menu_home">Home</string>
    <string name="text_begin_filter">Data de início</string>
    <string name="text_end_filter">Data de fim</string>
    <string name="error_data_filter">As datas escolhidas estão incorretas</string>
    <string name="text_first_chart">Gráfico de gastos</string>
    <string name="text_second_chart">Gráfico de rendas</string>
    <string name="text_home">Voltar para a tela inicial</string>
    <string name="effective_total">Saldo efetivado:</string>
    <string name="not_effective_total">Saldo inadimplente:</string>
    <string name="effective">Efetivado</string>
    <string name="not_effective">Inadimplente</string>
    <string name="empty_chart">Você precisa adicionar %s para visualizar o gráfico</string>
    <string name="title_basic_data">Precisamos de sua Universidade:</string>
    <string name="university">Universidade: </string>
    <string name="campus">Campus: </string>
    <string name="title_edit_statement">Editar Transação</string>
    <string name="delete">Excluir</string>
    <string name="near_by_count">Próximos Vencimentos</string>
    <string name="no_incomings">Você não possui lançamentos futuros.</string>
    <string name="to_start">Para começar, você deve fazer login com uma conta do Google.</string>
    <string name="text_no_transactions">Você não cadastrou nenhuma transação ainda.</string>
    <string name="university_not_in_list1">Se sua universidade ou campus não aparece na lista, escolha qualquer uma e entre em contato com </string>
    <string name="university_not_in_list2">guilhermemarx14@gmail.com</string>
    <string name="university_not_in_list3"> para que você seja alocado pro local correto.</string>


    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>
    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

</resources>
