<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/text_home" />
        <item
            android:id="@+id/nav_statements"
            android:icon="@drawable/ic_playlist_add_check"
            android:title="@string/text_statements" />
        <item
            android:id="@+id/nav_date_filter"
            android:icon="@drawable/ic_date_range_grey"
            android:title="@string/text_date_filter" />
        <item
            android:id="@+id/nav_payd_filter"
            android:icon="@drawable/ic_check_grey"
            android:title="@string/text_payd_filter" />
        <item
            android:id="@+id/nav_unpayd_filter"
            android:icon="@drawable/ic_close_grey"
            android:title="@string/text_unpayd_filter" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />

    </group>

</menu>
