<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/text_home" />
        <item
            android:id="@+id/nav_statements"
            android:icon="@drawable/ic_playlist_add_check"
            android:title="@string/text_statements" />

        <item
            android:id="@+id/nav_first_chart"
            android:icon="@drawable/ic_expand_more"
            android:title="@string/text_first_chart" />

        <item
            android:id="@+id/nav_second_chart"
            android:icon="@drawable/ic_expand_less"
            android:title="@string/text_second_chart" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />

    </group>


</menu>
