<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    >


    <TextView
        android:id="@+id/addSubcategoryTitle"
        style="@style/TextTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_activity_add_transaction"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        style="@style/TextDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/myriad_pro_bold"
        android:text="@string/text_category"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerCategory" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSubcategoryTitle" />

    <TextView
        android:id="@+id/textSubcategoryName"
        style="@style/TextDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/myriad_pro_bold"
        android:text="@string/text_subcategory"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerSubcategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerSubcategory" />

    <Spinner
        android:id="@+id/spinnerSubcategory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

    <TextView
        android:id="@+id/txtdescription"
        style="@style/TextDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/myriad_pro_bold"
        android:text="@string/text_date"
        app:layout_constraintBottom_toBottomOf="@+id/inpDateEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inpDateEnd" />

    <TextView
        android:id="@+id/txtdescription2"
        style="@style/TextDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/myriad_pro_bold"
        android:text="@string/text_description"
        app:layout_constraintBottom_toBottomOf="@+id/inpDescription"
        app:layout_constraintEnd_toStartOf="@+id/inpDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inpDescription" />

    <TextView
        android:id="@+id/txtValue2"
        style="@style/TextDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/myriad_pro_bold"
        android:text="@string/text_value_transaction"
        app:layout_constraintBottom_toBottomOf="@+id/inpValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inpValue" />

    <Button
        android:id="@+id/buttonDelete"
        style="@style/ButtonOrange"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/action_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPayd" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inpValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="30"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSubcategory" />

    <EditText
        android:id="@+id/inpDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpValue" />

    <ImageView
        android:id="@+id/ic_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpDescription"
        app:srcCompat="@drawable/ic_date_range_black_24dp" />

    <EditText
        android:id="@+id/inpDateEnd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpDescription" />

    <CheckBox
        android:id="@+id/cbPayd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/myriad_pro_bold"
        android:text="@string/text_payd"
        app:layout_constraintEnd_toEndOf="@+id/inpDateEnd"
        app:layout_constraintTop_toBottomOf="@+id/inpDateEnd" />

</androidx.constraintlayout.widget.ConstraintLayout>